# Brightify

./: .gitignore  MANIFEST.in  README.md  base_app.py  brightify.py  config.py  misc.py  pyproject.toml  requirements.txt  ui_misc.py  windows_app.py
.github/workflows/: workflow.yml
base/: BaseApp.py  Brightylog.py  Config.py  OLDBaseApp.py  SensorComm.py  SerialConfig.py  UIConfig.py  base_app.py  misc.py
brightify/: BaseApp.py  Brightylog.py  SensorComm.py  UIConfig.py  __init__.py  __main__.py  brightify_log.py  log_config.toml  ui_config.py
brightify/linux/: helpers.py
brightify/monitors/: MonitorBase.py  MonitorBaseImpl.py  MonitorDDCCI.py  MonitorGeneric.py  MonitorInternal.py  MonitorUSB.py  finder.py  m27q.py
brightify/res/: log_config.toml
brightify/scripts/windows/: actions.py  add_startup_task.py  remove_startup_task.py
brightify/src_py/: BaseApp.py  BrightifyApp.py  SensorComm.py  brightylog.py  ui_config.py
brightify/src_py/linux/: __init__.py  actions.py  helpers.py  vcp_linux.py
brightify/src_py/monitors/: MonitorBase.py  MonitorDDCCI.py  MonitorUSB.py  finder.py  m27q.py  vpc.py
brightify/src_py/windows/: MonitorWMI.py  WindowsApp.py  __init__.py  actions.py  add_startup_task.py  ccd_finder.py  ccd_paths.py  find_name_windows.py  helpers.py  remove_startup_task.py  vcp_windows.py
brightify/windows/: MonitorWMI.py  WindowsApp.py  actions.py  helpers.py
firmware/src/: main.cpp
monitors/: MonitorBase.py  MonitorInternal.py  MonitorUSB.py  m27q.py  monitor_base.py
res/configs/: log_config.toml
scripts/helpers/: invert_icon.py
scripts/windows/: add_startup_task.py  run_brightify.bat
windows/: WindowsApp.py  add_startup_task.py  helpers.py  requirements.txt  taskbar_icon.py
