[project]
name = "Brightify"
version = "0.1.1"
authors = [
    { name = "Robin S.", email = "brightify@rs-web.net" }
]
description = """
The Brightify application allows users to adjust the brightness of their monitors.
It primarily functions as a wrapper around the DDC/CI protocol, which is widely supported by most monitors.
Additionally, the application supports the addition of custom communication protocols for controlling the brightness of USB monitors.
The application is designed to run in the background and can be controlled via a taskbar icon. It will soon be OS-independent and support Windows, macOS, and Linux.
Brightyfi also features a brightness sensor that can automatically adjust the monitor's brightness based on the ambient light.
"""

requires-python = ">= 3.11"

keywords = [
    "brightness",
    "monitor",
    "screen",
    "control",
    "tool"
]

readme = "README.md"

dependencies = [
    # OS-independent dependencies
    "platformio",
    "pyserial",
    "libusb1",
    "PyQt6",
    "monitorcontrol",
    # Windows-only dependencies
    'pywin32; platform_system == "Windows"',
    'winshell; platform_system == "Windows"'
]
